// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when validating interchange element is missing metaEdId should have validation failures 1`] = `"Interchange Item DomainEntityElementName is missing a MetaEdId value."`;

exports[`when validating interchange element is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 18,
  "line": 5,
  "tokenText": "DomainEntityElementName",
}
`;

exports[`when validating interchange extension element is missing metaEdId should have validation failures 1`] = `"Interchange Item DomainEntityElementName is missing a MetaEdId value."`;

exports[`when validating interchange extension element is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 18,
  "line": 3,
  "tokenText": "DomainEntityElementName",
}
`;

exports[`when validating interchange extension identity template is missing metaEdId should have validation failures 1`] = `"Interchange Item DomainEntityIdentityTemplateName is missing a MetaEdId value."`;

exports[`when validating interchange extension identity template is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 27,
  "line": 3,
  "tokenText": "DomainEntityIdentityTemplateName",
}
`;

exports[`when validating interchange identity template is missing metaEdId should have validation failures 1`] = `"Interchange Item DomainEntityElementName is missing a MetaEdId value."`;

exports[`when validating interchange identity template is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 18,
  "line": 5,
  "tokenText": "DomainEntityElementName",
}
`;
